Fixed sticky header moving out of the view.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-html, body {
+/* html, body {
     height: 100%;
-}
+} */
 
 body {
     font-family: "SF Pro", "San Francisco", Arial, sans-serif;
@@ -93,6 +93,14 @@ section h1, h2, h3 {
     margin: 0;
     margin-top: 1rem;
     margin-bottom: 0.25rem;
+}
+
+section h1 {
+    font-size: 1.7rem;
+}
+
+section h2 {
+    font-size: 1.4rem;
 }
 
 section .features h1 {
